--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
  <td width=18% align=center>
     <marquee bgcolor="cyan">Sieradzki</marquee>
  <br><a href="z2_sieradzki.html" target="strony">zadanie 2</a>
+ <br><a href="sier_z3.html" target="strony">zadanie 3</a>
+ <br><a href="sier_z4.html" target="strony">zadanie 4</a>
  <br><a href="sier_z5_1.html" target="strony">zadanie 5_1</a>
  <br><a href="sier_z5_2.html" target="strony">zadanie 5_2</a>
  <br><a href="sier_z5_3.html" target="strony">zadanie 5_3</a>
  <br><a href="sier_z5_4.html" target="strony">zadanie 5_4</a>
  <br><a href="sier_z6.html" target="strony">zadanie 6</a>
+ <br><a href="sier_z13.html" target="strony">zadanie 13</a>
+ <br><a href="z16_sier.html" target="strony">zadanie 16</a>
  
  
  </td>
@@ -24,6 +28,7 @@
    <br><a href="z5_3_kod.html" target="strony">z5_kod_wewnetrzny</a>
    <br><a href="z5_4_kod.html" target="strony">z5_kod_liniowy</a>
    <br><a href="z6_kod.html" target="strony">z6_kod</a>
+   <br><a href="z13_kod.html" target="strony">z13_kod</a>
 
  </td>
  </tr>
