--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
  <br><a href="sier_z5_3.html" target="strony">zadanie 5_3</a>
  <br><a href="sier_z5_4.html" target="strony">zadanie 5_4</a>
  <br><a href="sier_z6.html" target="strony">zadanie 6</a>
+ <br><a href="sier_z7.html" target="strony">zadanie 7</a>
+ <br><a href="sier_z8.html" target="strony">zadanie 8</a>
+ <br><a href="sier_z9.html" target="strony">zadanie 9</a>
+ <br><a href="sier_z10.html" target="strony">zadanie 10</a>
+ <br><a href="sier_z11.html" target="strony">zadanie 11</a>
+ <br><a href="sier_z12.html" target="strony">zadanie 12</a>
  <br><a href="sier_z13.html" target="strony">zadanie 13</a>
+ <br><a href="sier_z14.html" target="strony">zadanie 14</a>
+ <br><a href="sier_z15.html" target="strony">zadanie 15</a>
  <br><a href="z16_sier.html" target="strony">zadanie 16</a>
  
  
@@ -29,6 +37,7 @@
    <br><a href="z5_4_kod.html" target="strony">z5_kod_liniowy</a>
    <br><a href="z6_kod.html" target="strony">z6_kod</a>
    <br><a href="z13_kod.html" target="strony">z13_kod</a>
+   <br><a href="z15_kod.html" target="strony">z15_kod</a>
 
  </td>
  </tr>
