--- a/z15_kod.html
+++ b/z15_kod.html
@@ -10,7 +10,7 @@
     <html>
         <head>
         <meta charset="utf-8">
-        <LINK href="sier_z13.css" rel="stylesheet" type="text/CSS">
+        <LINK href="sier_z15.css" rel="stylesheet" type="text/CSS">
         </head>
        <body>
             <p>:) uśmiechnięta buźka</p>
@@ -20,18 +20,16 @@
             <p> -_- podejżliwość</p>
             ;) oczko 
        </body>
-       </html>       
+       </html>    
 </textarea>
 <h1>KOD CSS</h1>
 <textarea rows="9"cols="30">
     p{
-        color:green;
-        font-size:39mm;
+        color:#AB215B;
+        font-size:20px;
     }
     body{
-        color: blue;
-        font-size:49mm;
+        color: rgb(49%,37%,83%);
+        font-size:30px;
     }
 </textarea>
- </body>
-</html>
