--- a/z16_sier.html
+++ b/z16_sier.html
@@ -7,18 +7,28 @@
 <body>
 <ol>
     <h1><li>Opis znacznika DIV</li></h1>
-    <p> hduahduia</p>
+    <b>-Element blokowy używany do grupowania treści.</b><br><br>
+        <b> -Składnia:</b><br>
+       &lt;div&gt;...&lt;/div&gt;<br><br>
+       <b>-Zastosowanie:</b><br>
+Tworzenie sekcji, kontenerów na stronie.
     <h1><li>Opis znacznika SPAN</li></h1>
+    <b>-Element liniowy używany do stylizacji małych fragmentów. Składnia:</b> <br>
+    &lt;span&gt;...&lt;/span&gt; <br><br>
+    <b>-Zastosowanie:</b> <br>
+    Stylizacja części tekstu lub elementów w linii.
     <h1><li>Różnica między znacznikami DIV i SPAN.</li></h1>
+    <b>-DIV: blokowy, zaczyna nową linię, grupuje duże sekcje.</b><br>
+    <b>-SPAN: liniowy, nie zaczyna nowej linii, stylizuje fragmenty.</b><br>
     <h1><li>Opisz oraz wymień elementy/tagi: 1)liniowe 2)blokowe 3)blokowo-liniowe.</li></h1>
-     <ul>
-        <li>Liniowe – &lt;span&gt;, &lt;em&gt;, &lt;strong&gt;</li>
+     
+        <b>-Liniowe – &lt;span&gt;, &lt;em&gt;, &lt;strong&gt;</b>
          <p>nie spowodują przejścia do nowej linii, będą wyświetlać się obok siebie, wjednej linii. Domyślnie, elementom liniowym przeglądarka ustawia właściwość "display" na"inline".</p>
-        <li>Blokowe – &lt;;div&gt;, &lt;p&gt;, &lt;article&gt;</li> 
+         <b>-Blokowe – &lt;div&gt;, &lt;p&gt;, &lt;article&gt;</b>
          <p>z kolei będą zachowywać się jak pudełka, które ustawiasz jeden pod drugim, a więc nigdy nie wyświetlą się obok siebie. Domyślnie, elementom blokowym przeglądarka ustawia właściwość "display" na "block",</p>
-        <li>Blokowo-liniowe – &lt;input&gt;, &lt;textarea&gt;</li>
+         <b>-Blokowo-liniowe – &lt;input&gt;, &lt;textarea&gt;</b>
          <p> z kolei będą zachowywać się jak liniowe, jeśli chodzi o położenie (a więc wyświetlać będą się obok siebie), natomiast różnią się od nich tym, że możesz nadać im różne wielkości. Ma to sens, np. &lt;textarea &gt; wyświetla się jako duży prostokąt i zdecydowanie "wychodzi" poza pojedynczą linijkę tekstu. Domyślnie, elementomliniowo blokowym przeglądarka ustawia właściwość "display" na "inline-block".</p>
-     </ul>
+     
 </ol>
 
  </body>
