--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <br><a href="sier_z13.html" target="strony">zadanie 13</a>
  <br><a href="sier_z14.html" target="strony">zadanie 14</a>
  <br><a href="sier_z15.html" target="strony">zadanie 15</a>
- <br><a href="z16_sier.html" target="strony">zadanie 16</a>
+ <br><a href="sier_z16.html" target="strony">zadanie 16</a>
  
  
  </td>
