--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
  <br><a href="sier_z14.html" target="strony">zadanie 14</a>
  <br><a href="sier_z15.html" target="strony">zadanie 15</a>
  <br><a href="sier_z16.html" target="strony">zadanie 16</a>
+ <br><a href="sier_z17_p1.html" target="strony">zadanie 17_p1</a>
+ <br><a href="sier_z17_p2.html" target="strony">zadanie 17_p2</a>
+ <br><a href="sier_z18.html" target="strony">zadanie 18</a>
+ <br><a href="sier_z19.html" target="strony">zadanie 19</a>
+ <br><a href="sier_z20.html" target="strony">zadanie 20</a>
+ <br><a href="sier_z21.html" target="strony">zadanie 21</a>
+ <br><a href="sier_z22.html" target="strony">zadanie 22</a>
+ <br><a href="sier_z23.html" target="strony">zadanie 23</a>
  
  
  </td>
@@ -38,6 +46,13 @@
    <br><a href="z6_kod.html" target="strony">z6_kod</a>
    <br><a href="z13_kod.html" target="strony">z13_kod</a>
    <br><a href="z15_kod.html" target="strony">z15_kod</a>
+   <br><a href="z17_p1_kod.html" target="strony">z17_p1_kod</a>
+   <br><a href="z17_p2_kod.html" target="strony">z17_p2_kod</a>
+   <br><a href="z18_kod.html" target="strony">z18_kod</a>
+   <br><a href="z19_kod.html" target="strony">z19_kod</a>
+   <br><a href="z20_kod.html" target="strony">z20_kod</a>
+   <br><a href="z22_kod.html" target="strony">z22_kod</a>
+   <br><a href="z23_kod.html" target="strony">z23_kod</a>
 
  </td>
  </tr>
