--- a/sier_z5_1.html
+++ b/sier_z5_1.html
@@ -2,9 +2,7 @@
 <head>
 <title>styl importowany</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- <style>
- @import url("sier_z5_1.css ");
- </style>
+<LINK href="sier_z5_2.css" rel="stylesheet" type="text/CSS">
 </head>
 <body bgcolor="silver">
  <p> Sieradzki - Programowanie to proces tworzenia kodu, który instruuje komputer, jak wykonać określone zadania.</p>
