--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
  <br><a href="sier_z21.html" target="strony">zadanie 21</a>
  <br><a href="sier_z22.html" target="strony">zadanie 22</a>
  <br><a href="sier_z23.html" target="strony">zadanie 23</a>
- 
+ <br><a href="sier_z32.html" target="strony">zadanie 32</a>
+ <br><a href="sier_z33.html" target="strony">zadanie 33</a>
+ <br><a href="sier_z34.html" target="strony">zadanie 34</a>
+ <br><a href="sier_z35.html" target="strony">zadanie 35</a>
+ <br><a href="sier_z36.html" target="strony">zadanie 36</a>
  
  </td>
  <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -53,6 +57,9 @@
    <br><a href="z20_kod.html" target="strony">z20_kod</a>
    <br><a href="z22_kod.html" target="strony">z22_kod</a>
    <br><a href="z23_kod.html" target="strony">z23_kod</a>
+   <br><a href="z33_kod.html" target="strony">z33_kod</a>
+   <br><a href="z34_kod.html" target="strony">z34_kod</a>
+   <br><a href="z36_kod.html" target="strony">z36_kod</a>
 
  </td>
  </tr>
