--- a/sier_z34.html
+++ b/sier_z34.html
@@ -3,7 +3,7 @@
  <head>
 <title>zadanie 34</title>
 <meta charset="utf-8" />
-
+<LINK href="zadanie34_sier.css" rel="stylesheet" type="text/CSS">
 <style type="text/css">
  h1 {
  width: 200pt;
@@ -22,14 +22,6 @@
  border : 4px double maroon;
  background : rgb(160,82,45);
 
- }
- h3 {
- width: 300pt;
- height:3cm;
- padding : 20px;
- margin-left : 1010px;
- border : 10px groove gray;
- background : rgb(139,69,19);
  }
  </style>
  </head>
