--- a/sier_z5_2.html
+++ b/sier_z5_2.html
@@ -2,8 +2,7 @@
 <head>
 <title>styl zewnetrzny</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- <LINK href="sier_z5_2.css" rel="stylesheet"
-type="text/CSS">
+ <LINK href="sier_z5_2.css" rel="stylesheet" type="text/CSS">
 </head>
 <body bgcolor="silver">
  <p>Sieradzki - Programowanie to proces tworzenia kodu, który instruuje komputer, jak wykonać określone zadania.</p>
