--- a/z34_kod.html
+++ b/z34_kod.html
@@ -6,50 +6,54 @@
 </head>
 <body>
 <h1>KOD HTML</h1>
-<textarea rows="47"cols="75">
-    <!DOCTYPE html>
-    <html>
-     <head>
-    <title>zadanie 34</title>
-    <meta charset="utf-8" />
-    
-    <style type="text/css">
-     h1 {
-     width: 200pt;
-     height:4cm;
-     padding : 30px;
-     margin-left : 700px;
-     border : 7px solid maroon;
-     background :rgb(165,42,42);
-     font-size: 16pt
-     }
-     h2 {
-     width: 400pt;
-     height:2cm;
-     padding : 50px;
-     margin : 40px;
-     border : 4px double maroon;
-     background : rgb(160,82,45);
-    
-     }
-     h3 {
-     width: 300pt;
-     height:3cm;
-     padding : 20px;
-     margin-left : 1010px;
-     border : 10px groove gray;
-     background : rgb(139,69,19);
-     }
-     </style>
-     </head>
-     <body>
-     <h1>Sieradzki<br> width:200pt; height:4cm; padding:30px; margin-left:700px;border:7px solid marron; background:rgb(165,42,42); font-size: 16pt;</h1>
-     <h2>Tomasz<br>width: 400pt; height:2cm; padding : 50px; margin : 40px; border : 4px double maroon; background :rgb(160,82,45); </h2>
-     <h3>23 2F2<br>width: 300pt; height:3cm; padding : 20px; margin-left : 1010px; border : 10px groove gray; background :rgb(139,69,19); </h3>
-     </body>
-    </html>
-    <!-- Tomasz Sieradzki -->
+<textarea rows="39"cols="75">
+<!DOCTYPE html>
+<html>
+ <head>
+<title>zadanie 34</title>
+<meta charset="utf-8" />
+<LINK href="zadanie34_sier.css" rel="stylesheet" type="text/CSS">
+<style type="text/css">
+ h1 {
+ width: 200pt;
+ height:4cm;
+ padding : 30px;
+ margin-left : 700px;
+ border : 7px solid maroon;
+ background :rgb(165,42,42);
+ font-size: 16pt
+ }
+ h2 {
+ width: 400pt;
+ height:2cm;
+ padding : 50px;
+ margin : 40px;
+ border : 4px double maroon;
+ background : rgb(160,82,45);
+
+ }
+ </style>
+ </head>
+ <body>
+ <h1>Sieradzki<br> width:200pt; height:4cm; padding:30px; margin-left:700px;border:7px solid marron; background:rgb(165,42,42); font-size: 16pt;</h1>
+ <h2>Tomasz<br>width: 400pt; height:2cm; padding : 50px; margin : 40px; border : 4px double maroon; background :rgb(160,82,45); </h2>
+ <h3>23 2F2<br>width: 300pt; height:3cm; padding : 20px; margin-left : 1010px; border : 10px groove gray; background :rgb(139,69,19); </h3>
+ </body>
+</html>
+<!-- Tomasz Sieradzki -->
 </textarea>
+<h1>KOD CSS</h1>
+<textarea rows="11"cols="75">
+ h3 {
+ width: 300pt;
+ height:3cm;
+ padding : 20px;
+ margin-left : 1010px;
+ border : 10px groove gray;
+ background : rgb(139,69,19);
+ }
+
+ /* Tomasz Sieradzki 2F2 */ 
 </textarea>
 </body>
 </html>
